# aws-iot-examples

./: README.md
src/DummyDevice/: CMakeLists.txt
src/DummyDevice/cert/: readme.md
src/DummyDevice/src/: client.pp  myMain.cpp
